- Changed script commands js-test, js-minibike, js-sleepers, and lua-test to all use "dj-" prefix instead.
- Changed syntax of "dj-patch XYZ on" to "dj-patch xyz /on" to match other command systax like dj-repair and dj-log-events.
- Fixed: Parsing of script metadata can be very slow or freeze when file has many comments [#4]
- Fixed: Incompatible line breaks in scripts on Linux [#28]


Version 0.14 - compatible with A16.4 (b8)

- Added repair task 't' to fix bugged trees that have zero HP without falling and give endless wood


Version 0.13 - compatible with A16.4 (b8)

- Add runtime patching system and command "dj-patch"
- Added patch for zombie corpse item dupe exploit; activate with: dj-patch corpse-dupe on
- Removed command aliases "js" and "lua" to leave only the "-test" ones.


Version 0.12 - compatible with A16.3 (b12) and A16.4 (b8)

- Added dj-eac-whitelist command, which allows to exempt selected players from EAC checks and use modded clients on EAC-enabled servers
- Fixed typo in js-sleepers command help


Version 0.11 - compatible ONLY with A16.3 (b12)

- Fixed bug that caused a JS exception when using console.log
- Improved js-minibike script to also rotate minibike in direction of player for easy take-off
- Fixed js-minibike script to not work properly when Steam Family Sharing is active
- Added js-variables script to show how to access and iterate basic game objects


Version 0.10 - compatible ONLY with A16.3 (b12)

- Fixed error message when dj-import is called without parameter
- Added function "importAssembly(assemblyName)" to JavaScript engine to allow importing all types of any .Net assembly
- Added global variables "sender" and "player" to scripting engines (lua and js)
- Added example script js-sleepers.js to show import of assemblies and access to objects
- Added background monitoring of added/removed/changed scripts with automatic reloading of script commands without server restart